logs/sltlocaltools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sltlocaltools'...
Compiling './lib/python3.5/site-packages/sltlocaltools/xlsconvertor.py'...
***   File "./lib/python3.5/site-packages/sltlocaltools/xlsconvertor.py", line 31
    print 'o:' + str(other)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sltlocaltools/zh_searcher.py'...
***   File "./lib/python3.5/site-packages/sltlocaltools/zh_searcher.py", line 72
    regrex = ur'@"[^"]*[\u4E00-\u9FA5]+[^"\n]*?\"'
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sltlocaltools-1.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
